// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps demos > demo: Basic 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Clickable 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
    <!--v-if-->
  </div>
  <div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: CustomizedProgressDot 1`] = `
"<div data-v-4de08a48="">
  <div data-v-4de08a48="" class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div data-v-4de08a48="" class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-trigger-wrapper"><span data-v-4de08a48="" class="custom-dot"></span></span>
          <!--teleport start-->
          <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
          <!--teleport end-->
        </div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div data-v-4de08a48="" class="ant-steps-item ant-steps-item-process ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-trigger-wrapper"><span data-v-4de08a48="" class="custom-dot"></span></span>
          <!--teleport start-->
          <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
          <!--teleport end-->
        </div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div data-v-4de08a48="" class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-trigger-wrapper"><span data-v-4de08a48="" class="custom-dot"></span></span>
          <!--teleport start-->
          <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
          <!--teleport end-->
        </div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div data-v-4de08a48="" class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-trigger-wrapper"><span data-v-4de08a48="" class="custom-dot"></span></span>
          <!--teleport start-->
          <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
          <!--teleport end-->
        </div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Error 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-error ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="close" class="anticon anticon-close"><svg focusable="false" class="" data-icon="close" width="1em" height="1em" fill="currentColor" aria-hidden="true" fill-rule="evenodd" viewBox="64 64 896 896"><path d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Icon 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span style="font-size: 18px;">👤</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Login
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span style="font-size: 18px;">📝</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Verification
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span style="font-size: 18px;">💳</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Pay
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable ant-steps-item-custom" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span style="font-size: 18px;">😄</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Done
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Inline 1`] = `
"<div style="display: flex; flex-direction: column; gap: 24px;">
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 1</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 1.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 2.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 3.</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 2</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 1.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-error ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="close" class="anticon anticon-close"><svg focusable="false" class="" data-icon="close" width="1em" height="1em" fill="currentColor" aria-hidden="true" fill-rule="evenodd" viewBox="64 64 896 896"><path d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 2.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 3.</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 3</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 1.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 2.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 3.</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div style="display: flex; align-items: center; gap: 16px;">
    <div style="min-width: 200px;">
      <div style="font-weight: 500;">Ant Design Title 4</div>
      <div style="font-size: 12px; color: rgba(0, 0, 0, 0.45);"> Ant Design, a design language for background applications </div>
    </div>
    <div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps" style="flex: 1 1 0%;">
      <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 1
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 1.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 2
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 2.</div>
          </div>
        </div>
      </div>
      <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
        <div class="ant-steps-item-container">
          <div class="ant-steps-item-tail"></div>
          <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
          <div class="ant-steps-item-content">
            <div class="ant-steps-item-title">Step 3
              <!--v-if-->
            </div>
            <div class="ant-steps-item-description">This is a Step 3.</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: LabelPlacement 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Nav 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1<span class="ant-steps-item-subtitle">00:00:05</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2<span class="ant-steps-item-subtitle">00:01:02</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3<span class="ant-steps-item-subtitle">waiting</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-steps ant-steps-horizontal ant-steps-navigation" role="navigation" aria-label="Steps" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 4
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Progress 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: ProgressDot 1`] = `
"<div>
  <div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
    <!--v-if-->
  </div>
  <div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!--v-if-->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Simple 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Small 1`] = `
"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: SmallSize 1`] = `
"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: StepNext 1`] = `
"<div data-v-31fbda4a="">
  <div data-v-31fbda4a="" class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
    <div data-v-31fbda4a="" class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">First
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-31fbda4a="" class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Second
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-31fbda4a="" class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail"></div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Last
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-31fbda4a="" class="steps-content">First-content</div>
  <div data-v-31fbda4a="" class="steps-action"><button data-v-31fbda4a="" class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Next</span>
    </button>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`Steps demos > demo: Vertical 1`] = `
"<div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: VerticalSmall 1`] = `
"<div class="ant-steps ant-steps-vertical ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;
